--- a/day2.qmd
+++ b/day2.qmd
@@ -23,12 +23,17 @@ Outline of topics:
 :::
 <a href="https://id529.github.io/slides-day2/lecture1-intro-to-r/programming_with_r.html" target="_blank">link to view slides fullscreen</a> 
 <br>
+<a href="https://drive.google.com/file/d/1vFYw2Eeb2xJvv0gX0ZCQi8Ug86bktiF5/view?usp=drive_link" target="_blank">link to pdf slides</a>
+<br>
+
 
 ::: {.callout-tip collapse="true"}
 ### Lecture 2: Project Workflows in R 
 <iframe src="https://id529.github.io/slides-day2/lecture2-projects-in-rstudio/r-projects.html#/title-slide" width="100%" height="500px"></iframe>
 :::
 <a href="https://id529.github.io/slides-day2/lecture2-projects-in-rstudio/r-projects.html#/title-slide" target="_blank">link to view slides fullscreen</a>
+<br>
+<a href="https://drive.google.com/file/d/1d-swOskjwa5yZxYE4jT4bcgX7oUtEHT8/view?usp=drive_link" target="_blank">link to pdf slides</a>
 <br>
 
 
@@ -38,6 +43,8 @@ Outline of topics:
 :::
 <a href="https://id529.github.io/slides-day2/lecture3-reading-in-data/reading-in-data.html" target="_blank">link to view slides fullscreen</a>
 <br>
+<a href="https://drive.google.com/file/d/1lvHoWj8tZi-qNcZNZksloVgc26hMmvA1/view?usp=drive_link" target="_blank">link to pdf slides</a>
+<br>
 
 ::: {.callout-tip collapse="true"}
 ### Lecture 4: Intro to ggplot2
@@ -45,12 +52,16 @@ Outline of topics:
 :::
 <a href="https://id529.github.io/slides-day2/lecture4-intro-to-ggplot2/ggplot2.html" target="_blank">link to view slides fullscreen</a>
 <br>
+<a href="https://drive.google.com/file/d/1Qm_YfXTSgQXRMrC4xL-8-TVRap2JUvXR/view?usp=drive_link" target="_blank">link to pdf slides</a>
+<br>
 
 ::: {.callout-tip collapse="true"}
 ### Activity: Data Visualization
 <iframe src="https://id529.github.io/slides-day2/activity1-visualization/activity1-visualization.html" width="100%" height="500px"></iframe>
 :::
 <a href="https://id529.github.io/slides-day2/activity1-visualization/activity1-visualization.html" target="_blank">link to view slides fullscreen</a>
+<br>
+<a href="https://drive.google.com/file/d/1TYUzdhrIykn6_LiT0UvArQIEuw1I0hYW/view?usp=drive_link" target="_blank">link to pdf slides</a>
 <br>
 
 ## Recordings
